# oca-credit-control

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
account_credit_control/: README.rst  __manifest__.py  odoochaindev.md
account_credit_control/i18n/: it.po
account_credit_control/models/: credit_control_communication.py  res_partner.py
account_credit_control/static/description/: index.html
account_credit_control/tests/: test_credit_control_run.py
account_credit_control_dunning_fees/: README.rst
account_credit_control_dunning_fees/static/description/: index.html
account_financial_risk/models/: res_partner.py
account_invoice_overdue_reminder/i18n/: pt_BR.po
partner_risk_insurance/: README.rst  __manifest__.py  dev.md
partner_risk_insurance/i18n/: ca.po
partner_risk_insurance/models/: res_partner.py
partner_risk_insurance/readme/: DESCRIPTION.rst
partner_risk_insurance/static/description/: index.html
partner_risk_insurance_product_sticker_invoice_report/: README.rst  __manifest__.py
partner_risk_insurance_product_sticker_invoice_report/i18n/: it.po  partner_risk_insurance_product_sticker_invoice_report.pot
partner_risk_insurance_product_sticker_invoice_report/static/description/: index.html
sale_financial_risk_info/: README.rst
sale_financial_risk_info/static/description/: index.html
sale_payment_sheet_financial_risk/: README.rst  __manifest__.py
sale_payment_sheet_financial_risk/models/: res_partner.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+2 files in other folders)
